chore: top voters cache
